# lab06_homework

./: CMakeLists.txt  CPackConfig.cmake  REPORT6.md  reserv.txt
.github/workflows/: cmake-multi-platform.yml
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  check  cmake_install.cmake  install_manifest.txt
_build/formatter_ex_lib/: Makefile  cmake_install.cmake
_build/formatter_ex_lib/formatter_lib/: Makefile  cmake_install.cmake
_build/hello_world_application/: Makefile  cmake_install.cmake
_build/solver_application/: Makefile  cmake_install.cmake
_build/solver_lib/: Makefile  cmake_install.cmake
_build/tests/: Makefile  cmake_install.cmake
formatter_ex_lib/: CMakeLists.txt
formatter_ex_lib/formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
hello_world_application/_build/: CMakeCache.txt
solver_application/: CMakeLists.txt
solver_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
solver_application/solver_lib/: Makefile  cmake_install.cmake
solver_application/solver_lib/formatter_lib/: Makefile
solver_lib/: CMakeLists.txt
tests/: CMakeLists.txt  tits.cpp
